# 101haskell

./: README.md
contributions/dph/src/: Main.hs
contributions/happstack/: SampleCompany.hs  Serverparts.hs  Total.hs  Types.hs
contributions/haskellAcceptor/: haskellAcceptor.cabal  sampleCompany.txt
contributions/haskellAcceptor/src/: Main.hs
contributions/haskellAcceptor/src/Company/: Parser.hs
contributions/haskellApplicative/: haskellApplicative.cabal
contributions/haskellApplicative/src/Company/: Data.hs  Parser.hs
contributions/haskellBarchart/: Main.hs  Makefile  haskellBarchart.cabal
contributions/haskellBarchart/src/: Main.hs
contributions/haskellBarchart/src/Company/: Data.hs  History.hs  Median.hs  Sample.hs  Total.hs
contributions/haskellCGI/: HaskellCGI.cabal
contributions/haskellCGI/src/: Response.hs
contributions/haskellCabal/: haskellCabal.cabal
contributions/haskellCabal/src/: Main.hs
contributions/haskellCabal/src/Company/: Cut.hs  Median.hs  Total.hs
contributions/haskellComposition/: .101meta  Cut.hs  HaskellComposition.cabal  Main.hs  Total.hs  haskellComposition.cabal
contributions/haskellComposition/src/: Main.hs
contributions/haskellComposition/src/Company/: Align.hs  Cut.hs  Depth.hs  Ranking.hs  Sample.hs  Total.hs
contributions/haskellData/: Company.hs  Cut.hs  HaskellData.cabal  Makefile  Total.hs  haskellData.cabal  sampleCompany.txt
contributions/haskellData/src/: Main.hs
contributions/haskellData/src/Company/: Cut.hs  Data.hs  Sample.hs  Total.hs
contributions/haskellEngineer/: README.md  haskellEngineer.cabal
contributions/haskellEngineer/src/: Main.hs
contributions/haskellFlat/: Company.hs  Cut.hs  HaskellFlat.cabal  Main.hs  Makefile  Total.hs  baseline  haskellFlat.cabal  sampleCompany.txt
contributions/haskellFlattened/: HaskellFlattened.cabal  haskellFlattened.cabal
contributions/haskellFlattened/src/: Main.hs
contributions/haskellFunctorial/: README.md  haskellFunctorial.cabal
contributions/haskellGloss/: 101companies-mvc.cabal  CHANGELOG.md  README.md
contributions/haskellHxt/: hxt.cabal
contributions/haskellHxt/src/: Main.hs
contributions/haskellLambda/: haskellLambda.cabal
contributions/haskellLambda/src/: Main.hs
contributions/haskellLambda/src/Company/: Cut.hs  Total.hs
contributions/haskellLens/: haskellLens.cabal
contributions/haskellLens/src/Company/: Cut.hs  Data.hs  Sample.hs  Total.hs
contributions/haskellList/: haskellList.cabal
contributions/haskellList/src/: Main.hs
contributions/haskellList/src/Company/: Cut.hs  Data.hs  Sample.hs  Total.hs
contributions/haskellLogging/: haskellLogging.cabal
contributions/haskellMap/: Company.hs  Cut.hs  HaskellMap.cabal  Main.hs  Makefile  Total.hs  sampleCompany.txt
contributions/haskellMonoid/: haskellMonoid.cabal
contributions/haskellMonoid/src/: Main.hs
contributions/haskellMonoid/src/Company/: Depth.hs  Sample.hs  Total.hs
contributions/haskellNonfunctorial/: Makefile  haskellNonfunctorial.cabal
contributions/haskellNonfunctorial/src/: Main.hs
contributions/haskellNonfunctorial/src/Company/: Cut.hs  Median.hs  Raise.hs  Sample.hs  Total.hs  Traversal.hs
contributions/haskellNovice/: Main.hs
contributions/haskellParsec/: Makefile  haskellParsec.cabal  sampleCompany.txt
contributions/haskellParsec/src/: Main.hs
contributions/haskellParsec/src/Company/: Cut.hs  Data.hs  Parser.hs  Sample.hs  Total.hs
contributions/haskellProfessional/: haskellProfessional.cabal
contributions/haskellRecord/: Company.hs  Cut.hs  HaskellRecord.cabal  Makefile  Total.hs  haskellRecord.cabal  sampleCompany.txt
contributions/haskellReflex/: 101companies-frp.cabal  CHANGELOG.md  README.md
contributions/haskellScott/: haskellScott.cabal
contributions/haskellSpec/: haskellSpec.cabal
contributions/haskellSpec/src/: Main.hs
contributions/haskellSpec/src/Company/: Axioms.hs  Conditions.hs  Definitions.hs  Functions.hs  Generation.hs  Implementation.hs  Invariants.hs  Properties.hs  Representation.hs  Sample.hs  Signature.hs  Tests.hs
contributions/haskellStarter/: Cut.hs  HaskellStarter.cabal  Main.hs  Makefile  README.md  Total.hs  baseline.txt  haskellStarter.cabal
contributions/haskellSyb/: haskellSyb.cabal
contributions/haskellSyb/src/: Main.hs
contributions/haskellSyb/src/Company/: Align.hs  Cut.hs  Data.hs  Depth.hs  Deriving.hs  Generics.hs  Ranking.hs  Total.hs
contributions/haskellTermRep/: Conversion.hs  HaskellTermRep.cabal  Main.hs  TermRep.hs  Total.hs  baseline  haskellTermRep.cabal
contributions/haskellTree/: BX.hs  Cut.hs  HaskellTree.cabal  LLTree.hs  Main.hs  Makefile  Total.hs  baseline  haskellTree.cabal
contributions/haskellVariation/: HaskellVariation.cabal  haskellVariation.cabal  sampleCompany.txt
contributions/haskellWhere/: haskellWhere.cabal
contributions/haskellWriter/: haskellWriter.cabal
contributions/haskellWriter/src/: Main.hs
contributions/haskellWriter/src/Company/: Cut.hs  Data.hs  Sample.hs
contributions/hughesPJ/: HughesPJ.cabal  Main.hs  Makefile  Unparser.hs  hughesPJ.cabal
contributions/hughesPJ/src/: Main.hs
contributions/hughesPJ/src/Company/: Align.hs  Cut.hs  Total.hs  Unparser.hs
contributions/hxt/: HaskellHxt.cabal  haskellHxt.cabal
contributions/hxt/src/: Main.hs
contributions/hxtPickler/: hxtPickler.cabal
contributions/monoidal/: monoidal.cabal
contributions/mvar/: MVar.cabal
contributions/nonmonadic/: Cut.hs  Log.hs  Main.hs  Makefile  baseline  nonmonadic.cabal
contributions/nonmonadic/src/: Main.hs
contributions/nonmonadic/src/Company/: Cut.hs  Log.hs
contributions/parsec/: HaskellParsec.cabal
contributions/strafunski/: Main.hs  Makefile  Strafunski.cabal  strafunski.cabal
contributions/syb/: Syb.cabal  syb.cabal
contributions/tabaluga/: Tabaluga.cabal  tabaluga.cabal
contributions/tmvar/: Focus.hs  Main.hs
contributions/writerMonad/: Cut.hs  Makefile  writerMonad.cabal
contributions/wxHaskell/: WxHaskell.cabal
tools/: make-101haskell
tools/diff-101haskell/: .gitignore  Makefile  baseline.json  diff.py
(+117 files in other folders)
