name:                haskellBarchart
version:             0.1.0.0
synopsis:            A barchart for historical data with Haskell
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Main
    Company.Data
    Company.Sample
    Company.Median
    Company.History
  build-depends:       base >=4.4 && < 5.0, data-accessor, Chart, HUnit
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, data-accessor, Chart, HUnit
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
