name:                haskellBarchart
version:             0.1.0.0
synopsis:            Analysis of historical company data with Haskell
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Main
    Company.Data
    Company.Sample
    Company.Total
    Company.Median
    Company.History
  build-depends:       base >=4.4 && < 5.0,
                       Chart >=1.2.2 && < 1.3,
                       Chart-diagrams >=1.2.2 && < 1.3,
                       lens >=4.1.2 && < 4.2,
                       containers >=0.5 && < 0.6,
                       data-default-class >=0.0.1 && <0.2,
                       HUnit >=1.2.5.2 && < 1.3
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base >=4.4 && < 5.0,
                       Chart >=1.2.2 && < 1.3,
                       Chart-diagrams >=1.2.2 && < 1.3,
                       lens >=4.1.2 && < 4.2,
                       containers >=0.5 && < 0.6,
                       data-default-class >=0.0.1 && <0.2,
                       HUnit >=1.2.5.2 && < 1.3
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
