name:                haskellHxt
version:             0.1.0.0
synopsis:            In-memory XML-processing in Haskell with HXT
homepage:            http://101companies.org/wiki/Contribution:hxt
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Main
    Company.Cut
    Company.Total
  build-depends:       base >=4.4 && < 5.0, hxt, directory, HUnit
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit, hxt, directory, HUnit
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
