name:                haskellLens
version:             0.1.0.0
synopsis:            Total and Cut with Lenses
homepage:            http://101companies.org/wiki/Contribution:haskellLens
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Main
    Company.Data
    Company.Sample
    Company.Total
    Company.Cut
  build-depends:       base >=4.4 && < 5.0,
                       HUnit >=1.2.5.2 && < 1.3,
                       lens >=4.1.2.1 && <4.2
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base >=4.4 && < 5.0,
                       HUnit >=1.2.5.2 && < 1.3,
                       lens >=4.1.2.1 && <4.2
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
