name:                haskellList
version:             0.1.0.0
synopsis:            List processing with map and friends in Haskell
homepage:            101companies.org
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Company.Data
    Company.Cut
    Company.Total
  build-depends:       base >=4.4 && < 5.0
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
