name:                haskellParsec
version:             0.1.0.0
synopsis:            Parsing in Haskell with Parsec
homepage:            101companies.org
build-type:          Simple
cabal-version:       >=1.6

executable HaskellParsec
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.4, parsec >=3.1
  hs-source-dirs:      src
