name:                haskellSyb
version:             0.1.0.0
synopsis:            Generic Programming in Haskell with SyB
homepage:            101companies.org
license-file:        LICENSE
author:              Ralf Lämmel
maintainer:          rlaemmel@gmail.com
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Company.Cut
    Company.Total
    Company.Data
  build-depends:       base >= 4.4 && < 5.0,
                       syb >= 0.3
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit, syb
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
