name:                haskellSyb
version:             0.1.0.0
synopsis:            Generic Programming in Haskell with SyB
homepage:            http://101companies.org/wiki/Contribution:haskellSyb
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Company.Data
    Company.Sample
    Company.Generics
    Company.Total
    Company.Cut
    Company.Depth
    Company.Ranking
  build-depends:       base >= 4.4 && < 5.0,
                       syb >= 0.3
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit, syb
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
