name:                haskellWriter
version:             0.1.0.0
synopsis:            Logging in Haskell with the Writer monad
homepage:            http://101companies.org/wiki/Contribution:haskellWriter
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Company.Data
    Company.Sample
    Company.Cut
    Company.Log
  build-depends:       base >=4.4 && < 5.0, mtl
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit, mtl
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
