name:                hughesPJ
version:             0.1.0.0
synopsis:            Unparsing in Haskell with a pretty-combinator library
homepage:            101companies.org
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:
    Company.Data
    Company.Sample
    Company.Unparser
  build-depends:       base >=4.4 && < 5.0, pretty >=1.1
  hs-source-dirs:      src

test-suite basic-tests
    main-is:           Main.hs
    build-depends:     base, HUnit, pretty
    hs-source-dirs:    src
    type:              exitcode-stdio-1.0
